feat: add user rewards API
